--- a/src/ui/Mobile/Apps/Terminal/kb-dark-theme.css
+++ b/src/ui/Mobile/Apps/Terminal/kb-dark-theme.css
@@ -22,6 +22,11 @@
     background: rgba(83, 83, 83, 0.5);
 }
 
+.dark-theme .hg-button.key-active {
+    background: rgba(126, 126, 126, 0.5);
+    color: white;
+}
+
 .hg-space-big {
     width: 100px;
 }
