Improve keyboard view and fix various issues with it

--- a/src/index.css
+++ b/src/index.css
@@ -123,6 +123,10 @@
 }
 
 @layer base {
+    html, body {
+        height: 100%;
+    }
+
     * {
         @apply border-border outline-ring/50;
     }
